(library
 (name mdexp_test)
 (package mdexp-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Mdexp_stdlib
  -open
  Mdexp.Private.Std)
 (libraries mdexp mdexp_stdlib yojson-five)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect)))
